src/test/testData/AnnotatorReservedKeyword.klass
package example

class <error descr="Reserved Java keyword">class</error>
{
    <error descr="Reserved Java keyword">import</error>: String key;
}
